--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "content-feed",
-  "version": "0.1.0",
+  "version": "0.0.0-development",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,8 @@
     "postcoverage": "codecov",
     "precommit": "npm test",
     "prepush": "npm test",
-    "commitmsg": "validate-commit-msg"
+    "commitmsg": "validate-commit-msg",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "keywords": [],
   "author": "Mikeal Rogers <mikeal.rogers@gmail.com> (http://www.mikealrogers.com)",
@@ -33,6 +34,11 @@
   "devDependencies": {
     "husky": "^0.14.3",
     "mkdirp": "^0.5.1",
-    "tap": "^10.7.2"
+    "tap": "^10.7.2",
+    "semantic-release": "^7.0.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mikeal/content-feed.git"
   }
 }
